# YarpMatLogger

./: .gitignore  CMakeLists.txt  README.md
cmake/: YarpMatLoggerConfig.cmake.in  YarpMatLoggerConfig.cmake.ini
src/: CMakeLists.txt
src/LibCustomMsg/: CMakeLists.txt
src/LibCustomMsg/MatrixCollection/: CMakeLists.txt
src/LibCustomMsg/MatrixCollection/include/YarpMatLogger/MatrixCollection/: Helper.h
src/LibCustomMsg/MatrixCollection/src/: Helper.cpp
src/LibCustomMsg/thrifts/: CMakeLists.txt  MatrixCollection.thrift
src/LibCustomMsg/thrifts/MatrixCollection/: CMakeLists.txt
src/LibMessageHandler/: CMakeLists.txt
src/LibMessageHandler/include/: MatrixCollectionHandler.h  MessageHandler.h  TimeHandler.h  VectorHandler.h
src/LibMessageHandler/include/YarpMatLogger/MessageHandler/: MatrixCollectionHandler.h  MessageHandler.h  TimeHandler.h  VectorHandler.h
src/LibMessageHandler/src/: MatrixCollectionHandler.cpp  TimeHandler.cpp  VectorHandler.cpp
src/Utilities/: CMakeLists.txt
src/YarpMatLoggerModule/: CMakeLists.txt
src/YarpMatLoggerModule/app/: CMakeLists.txt
src/YarpMatLoggerModule/app/YarpMatLogger/: YarpMatLoggerModuleConfig.ini
src/YarpMatLoggerModule/include/: YarpMatLoggerModule.h
src/YarpMatLoggerModule/src/: YarpMatLoggerModule.cpp  main.cpp
src/YarpMatLoggerModule/thrifts/: YarpMatLoggerCommands.thrift
